--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "first attempt to create a webpack boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/fabioaromanini/webpack-1/issues"
   },
-  "homepage": "https://github.com/fabioaromanini/webpack-1#readme"
+  "homepage": "https://github.com/fabioaromanini/webpack-1#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.5",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.13"
+  }
 }
