--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "clean": "rimraf dist",
+    "build": "npm run clean && webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.5",
+    "rimraf": "^2.6.2",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   }
