--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first attempt to create a webpack boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./src",
     "clean": "rimraf dist",
     "build": "npm run clean && webpack"
   },
@@ -23,6 +23,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "lodash": "^4.17.5",
     "rimraf": "^2.6.2",
     "webpack": "^4.5.0",
