--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest ./src",
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack"
+    "build": "npm run clean && webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.5",
     "rimraf": "^2.6.2",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
