--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest ./src",
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack",
+    "cleanfull": "rimraf dist node_modules",
+    "build": "npm run clean && webpack --display-error-details",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -28,7 +29,10 @@
     "lodash": "^4.17.5",
     "rimraf": "^2.6.2",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.13",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "html-loader": "^0.5.5"
   }
 }
