--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "lodash": "^4.17.5",
@@ -33,6 +34,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "html-loader": "^0.5.5"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1"
   }
 }
