--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-1",
-  "version": "1.0.0",
-  "description": "first attempt to create a webpack boilerplate",
+  "name": "tiny-react-boilerplate",
+  "version": "0.9.0",
+  "description": "tiny react boilerplate, with the smallest amount of settings required to develop a react application",
   "main": "index.js",
   "scripts": {
     "test": "jest ./src",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fabioaromanini/webpack-1.git"
+    "url": "https://github.com/fabioaromanini/tiny-react-boilerplate.git"
   },
   "author": "Fabio Romanini",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fabioaromanini/webpack-1/issues"
+    "url": "https://github.com/fabioaromanini/tiny-react-boilerplate/issues"
   },
-  "homepage": "https://github.com/fabioaromanini/webpack-1#readme",
+  "homepage": "https://github.com/fabioaromanini/tiny-react-boilerplate#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
